# image_labeling_utils

./: CMakeLists.txt  README.md  mrs_simple_cave_01.sdf  package.xml  plugins.xml
config/: artefact_gt.cfg  default.yaml  dynparam.cfg  general.cfg  install_json.sh
include/image_labeling_utils/: ImageLabelingUtils.h
launch/: artefact_gt.launch  uav.launch
scripts/: artefact_gt_publisher.py
src/: ImageLabelingUtils.cpp
tmux_scripts/one_drone_gps/: layout.json  session.yml
